--- a/sini/templates/sini/api_user/acc_active_email.html
+++ b/sini/templates/sini/api_user/acc_active_email.html
@@ -5,6 +5,6 @@ Este es un correo electrónico de confirmación de cuenta por parte de la aplica
 Estos son los datos para acceder a la aplicación móvil:<br>
 Email: {{email}}<br>
 Contraseña: {{password_random}}<br><br>
-Puede activar su cuenta con el siguiente enlace:<a href="http://{{ domain }}{% url 'agrimensuras:activate' uidb64=uid token=token %}">Confirmar cuenta</a>
+Puede activar su cuenta con el siguiente enlace:<a href="http://{{ domain }}{% url 'sini:activate_user' uidb64=uid token=token %}">Confirmar cuenta</a>
 
 {% endautoescape %}  
