--- a/sini/templates/sini/api_user/api_user_detail.html
+++ b/sini/templates/sini/api_user/api_user_detail.html
@@ -3,7 +3,7 @@
 {% load leaflet_tags %}
 {% load geojson_tags %}
 {% block title %}
-  Detalles Finca
+  Detalles Aviso
 {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
@@ -56,7 +56,7 @@
                       id="eliminarB"
                       data-bs-toggle="modal"
                       data-bs-target="#deleteModal"
-                      value="{{ api_user.id }} ">
+                      value="{{ api_user.id }}">
                 <i class="far fa-trash-alt me-2" aria-hidden="true"></i>&nbsp;&nbsp;Eliminar
               </button>
             </div>
