--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -42,6 +42,12 @@
                   <span class="sidenav-normal">Avisos</span>
                 </a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link {% if 'incidence' in segment %} active {% endif %}" href="{% url 'sini:incidence_list' %}">
+                  <span class="sidenav-mini-icon"> I </span>
+                  <span class="sidenav-normal">Incidencias</span>
+                </a>
+              </li>
             </ul>
           </div>
         </li>
