--- a/sini/templates/sini/incidence/incidence_list.html
+++ b/sini/templates/sini/incidence/incidence_list.html
@@ -200,7 +200,7 @@
                 </table>
               {% else %}
                 <h3 style="color: red" class="text-center">
-                  {% trans 'No existen avisos a mostrar' %}
+                  {% trans 'No existen incidencias a mostrar' %}
                 </h3>
               {% endif %}
             </div>
